# Nair

./: readme.txt
Tairclient/: TairLib.sln  tairtest.sln
Tairclient/TairLib/: TairClient.cs  TairLib.csproj  tair_serv.cs
Tairclient/TairLib/Properties/: AssemblyInfo.cs
Tairclient/gen-cpp/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  server  tair_serv.cpp  tair_serv.h  tair_serv_server.skeleton.cpp  tair_service_types.cpp  tair_service_types.h
Tairclient/gen-cpp/.deps/: tair_serv.Po  tair_serv_server.skeleton.Po  tair_service_constants.Po  tair_service_types.Po
Tairclient/gen-cpp/autom4te.cache/: output.1  requests  traces.0  traces.1
Tairclient/tairtest/: Program.cs  tairtest.csproj
Tairclient/tairtest/Properties/: AssemblyInfo.cs
other/: 03 Nair-Architecture_2015 10 14_v1 0.vsd  Shopping.rar  Thrift_Nair功能点.docx  centos_config.docx~RF2eef89f.TMP  centos_config~EF880.tmp  nair设计介绍.docx  tair2.3配置与部署说明.docx  tair技术介绍概要.docx  基于Thrift的跨语言服务接口_李超(1)-洪.doc  基于Thrift的跨语言服务接口_李超.doc  设置环境变量.txt  项目总结报告内容要求-new.doc
other/homework/: homework.docx
other/newnair/gen-cpp/: tair_serv.cpp  tair_serv.h  tair_serv_server.skeleton.cpp  tair_service_constants.cpp  tair_service_types.cpp  tair_service_types.h
other/newnair/gen-csharp/: tair_data_pair.cs  tair_serv.cs
other/newnair1/gen-cpp/: tair_serv.cpp  (+5 more)
other/架构/: 旅行系统.docx
other/软件构架/: 1.ppt  10.ppt  11.ppt  12.ppt  13.ppt  14.ppt  2.ppt  3.ppt  4.ppt  5.ppt  6.ppt  7.ppt  8.ppt  9.ppt  homework.docx  资料.docx
tair/dockerfile/: Dockerfile  nairserver.conf  readme.md  run.sh
(+31 files in other folders)
